<resources>
    <string name="app_name">FireBaseTestApp</string>
    <string name="password_check_text">新しいパスワードを両方に正しく入力してください</string>
    <string name="title_text">FireBaseTestApp</string>
    <string name="login_text">ログイン</string>
    <string name="register_text">登録情報入力</string>
    <string name="register_excute_text">登録実行</string>
    <string name="to_resister_text">※まだ登録が済んでいない場合はこちら</string>
    <string name="to_changepassword_text">※パスワードを忘れた場合はこちら</string>
    <string name="passchange_text">パスワード変更</string>
    <string name="mailadress">メールアドレス ； </string>
    <string name="password">パスワード</string>
    <string name="hint_name">ユーザー名</string>
    <string name="hint_mail">メールアドレスを入力してください</string>
    <string name="hint_mailadress_resistered">登録済みのメールアドレスを入力してください</string>
    <string name="hint_pass">パスワードを入力してください(6文字以上)</string>
    <string name="hint_change_pass">新しいパスワードを入力してください(6文字以上)</string>
    <string name="once_edit_text">※確認のため、もう一度入力してください</string>
    <string name="announce_text">メールアドレス宛に、パスワード変更メールが届きます。\nメール内URLから、設定したいパスワードを入力してください。\nサイト内で実行ボタンを押すと、パスワード変更が完了します。</string>
    <string name="excute_login">ログイン</string>
    <string name="excute_register">登録</string>
    <string name="excute_change">登録変更</string>
    <string name="warn_mail">メールアドレスを正しく入力してください</string>
    <string name="warn_password">パスワードを正しく入力してください</string>
    <string name="success">成功</string>
    <string name="error">失敗</string>
    <string name="select_image">User画像選択</string>
    <string name="signout_menu_text">SIGN OUT</string>
    <string name="newmessage_menu_text">新規メッセージ作成</string>
    <string name="create_chatroom_edit">新規ChatRoom名</string>
    <string name="create_chatroom_btn">部屋作成</string>
    <string name="edit_chat_massage">メッセージ</string>
    <string name="send_massage">送信</string>
    <string name="homelogin_title">メッセージ</string>
    <string name="profile_setting_text">プロフィール変更</string>
    <string name="account_setting_text">アカウント変更</string>
    <string name="password_setting_text">パスワード変更</string>
    <string name="neme_now_setting_text">名前（現在）</string>
    <string name="name_change_setting_text">名前（変更後）</string>
    <string name="save_profilechange_button">プロフィール変更</string>
    <string name="userimage_profile_setting_text">User画像</string>
    <string name="setting_text">各種設定</string>
    <string name="empty_message">メッセージを送信してください</string>
    <string name="changepassword_text">パスワード変更</string>
    <string name="excute_changepassword_text">変更実行</string>
    <string name="reserch_hint">検索したい掲示板名を入力してください(50字以内)</string>
    <string name="create_thread_hint">作りたい掲示板名を入力してください(50字以内)</string>
    <string name="empty_thread">掲示板はありません</string>
    <string name="empty_inthread">メッセージはありません</string>
    <string name="empty_chatrooms">チャットルームはありません</string>
    <string name="empty_inchatroom">メッセージはありません</string>
    <string name="empty_friend">フレンドは登録されておりません</string>
    <string name="success_createthread_text">掲示板を作成しました</string>
    <string name="please_input_text">文字を入力してください</string>
    <string name="allthread_text">掲示板一覧を新着で表示します</string>
    <string name="thead_tab_text">掲示板</string>
    <string name="chatroom_tab_text">チャットルーム</string>
    <string name="mypage_tab_text">マイページ</string>
    <string name="create_message_to_thread_hint">書き込む内容を入力してください</string>
    <string name="research_others_hint">検索したいUser名を入力してください</string>
    <string name="success_sendmessage_to_thread_text">メッセージを送りました</string>
    <string name="sendmessage_materialdialog">この人にメッセージを送りますか？</string>
    <string name="positivebtn_materialdialog">はい</string>
    <string name="negativebtn_materialdialog">いいえ</string>
    <string name="logout_text">ログアウト</string>
    <string name="get_message_text"> メッセージ取得</string>
    <string name="default_notification_channel_id" translatable="false">my_app_fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">my_app_fcm_default_name</string>
    <string name="choice_add_friend_text">フレンドに追加するユーザーを選択してください</string>
    <string name="coice_add_member_text">チャットに招待するメンバーを選んでください</string>
    <string name="check_addmember_text">選択したメンバーをチャットに招待しますか？</string>
    <string name="friend_function">フレンド機能</string>
    <string name="done_addfriend">登録済</string>
    <string name="excute_addfriend_materialdialog">選択した相手をフレンド登録しますか？</string>
    <string name="camera_text">カメラで撮影</string>
    <string name="folder_text">画像フォルダから選択</string>
    <string name="changefrontimage_title">ルームアイコン変更</string>
    <string name="roomicon_text">ルームアイコン</string>
    <string name="excute_changefrontimage">アイコン変更</string>
    <string name="researchfriend_hint">検索したいフレンド名を入力してください</string>
    <string name="allfriend_title">フレンド一覧</string>
    <string name="title_splash">FireBaseTestApp</string>

    <string name="fcm_end_point">https://fcm.googleapis.com/fcm/send</string>
    <string name="fcm_server_key">AAAAYoCkPaY:APA91bFAxP61YE38Sc33dA8uVCzmU0FtIKzNdTjk5LUXkhPkQneTFGjKHpcqlQyaXHPfFkcE7SVVNo0pDZms4fmfIT7reBFopEnPimgvz4229howecP8kmDj2pMfE4UMXXIh0x3XUN-O</string>
</resources>