<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login_Resister_PassChange.Resister_Activity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#A2CA78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="@id/headerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/headerView" />

        <ImageView
            android:id="@+id/closeImageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerView">


        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/register_text"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="#9AD160"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/menuView"
    app:layout_constraintBottom_toBottomOf="parent">

    <Button
        android:id="@+id/myImageviewBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_image_view"
        android:text="@string/select_image"
        android:textStyle="bold"
        android:textColor="@color/white_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myImageview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="@id/myImageviewBtn"
        app:layout_constraintEnd_toEndOf="@id/myImageviewBtn"
        app:layout_constraintStart_toStartOf="@id/myImageviewBtn"
        app:layout_constraintTop_toTopOf="@id/myImageviewBtn" />

    <Button
        android:id="@+id/excute_resister_Btn"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_excute"
        android:text="@string/register_excute_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white_80"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPass_resister" />


    <EditText
        android:id="@+id/editName_resister"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_name"
        android:padding="10dp"
        android:textSize="13dp"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/myImageviewBtn"
        app:layout_constraintStart_toStartOf="@id/editMail_resiter_View"
        app:layout_constraintEnd_toEndOf="@id/editMail_resiter_View" />

    <EditText
        android:id="@+id/editMail_resiter_View"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_mail"
        android:padding="10dp"
        android:textSize="13dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editName_resister" />


    <EditText
        android:id="@+id/editPass_resister"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/hint_pass"
        android:inputType="numberPassword"
        android:textSize="13sp"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editMail_resiter_View" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>