<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login_Resister_PassChange.ChangePassword_Activity"
    android:background="#CCE8F8D8">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/passchange_text"
            android:textSize="25sp"
            android:background="#BC8FFB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/excute_changePass_Btn"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_excute"
        android:text="@string/excute_changepassword_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white_80"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_mailadress_changePass_editView"
        app:layout_constraintBottom_toTopOf="@+id/annouce_textView" />



    <EditText
        android:id="@+id/edit_mailadress_changePass_editView"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/hint_mailadress_resistered"
        android:inputType="textEmailAddress"
        android:textSize="13sp"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuView"
        app:layout_constraintBottom_toTopOf="@id/excute_changePass_Btn"
        />



    <TextView
        android:id="@+id/annouce_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/announce_text"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/excute_changePass_Btn"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>