<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login_Resister_PassChange.ChangePassword_Activity"
    android:background="#9AD160">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#A2CA78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="@id/headerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/headerView" />

        <ImageView
            android:id="@+id/closeImageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerView">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/changepassword_text"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/excute_changePass_Btn"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_excute"
        android:text="@string/excute_changepassword_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white_80"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editMail_changePassword_View"
        app:layout_constraintBottom_toTopOf="@+id/annouce_textView" />




    <EditText
        android:id="@+id/editMail_changePassword_View"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_mailadress_resistered"
        android:padding="10dp"
        android:textSize="13dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuView" />



    <TextView
        android:id="@+id/annouce_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/announce_text"
        android:textSize="13sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/excute_changePass_Btn" />
</androidx.constraintlayout.widget.ConstraintLayout>